Closed Bug 598424 Opened 14 years ago Closed 14 years ago

Silence some compiler warnings in nativegen.py-generated code

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stejohns, Assigned: stejohns)

Details

Attachments

(1 file)

Some "helpful" compilers will now issue a warning:

    "all member functions in class Foo are private"

This applies to SlotOffsetsAndAsserts when built in non-Debug builds, and since some builds enable warnings-as-errors, we need to silence this warning.
Attached patch PatchSplinter Review
Amazingly useless warning, IMHO, but easier to silence it this way than to fight with a bunch of different project files...
Assignee: nobody → stejohns
Attachment #477251 - Flags: review?(edwsmith)
See also bug 590112, comment 4

(It looks to me like Steven adopted a different approach in attachment 477251 [details] [diff] [review] than I did in attachment 469027 [details] [diff] [review] )
Comment on attachment 477251 [details] [diff] [review]
Patch

I think I ran into that with gcc 4.4 on ubuntu 10.04, and i worked around it by changing "private" to "protected.  (shrug).

if you do it this way, best if you say what compiler and what platform specifically is being appeased.  We've been asking that for all such appeasement tweaks.
Attachment #477251 - Flags: review?(edwsmith) → review+
(In reply to comment #2)
> See also bug 590112, comment 4

Doh, somehow I didn't notice that bug. 

Pushed my change (with comment mod) as 5231:45e7ba7fd238
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: