Bug 598424 - Silence some compiler warnings in nativegen.py-generated code (r=edwsmith)